chapter 8 method inject