@@ -2,25 +2,26 @@ package geektime.tdd.di;
 
 import jakarta.inject.Inject;
 
-import java.lang.reflect.Constructor;
-import java.lang.reflect.Field;
-import java.lang.reflect.InvocationTargetException;
-import java.lang.reflect.Parameter;
+import java.lang.reflect.*;
 import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 import static java.util.Arrays.stream;
+import static java.util.stream.Stream.concat;
 
 class ConstructorInjectProvider<T> implements ContextConfig.ComponentProvider<T> {
     private final Constructor<T> injectConstructor;
     private final List<Field> injectFields;
+    private final List<Method> injectMethods;
 
     public ConstructorInjectProvider(Class<T> component) {
         this.injectConstructor = getInjectConstructor(component);
         this.injectFields = getInjectFields(component);
+        this.injectMethods = getInjectMethods(component);
     }
+
 
     @Override
     public T get(Context context) {
@@ -32,6 +33,9 @@ class ConstructorInjectProvider<T> implements ContextConfig.ComponentProvider<T>
             for (Field field : injectFields) {
                 field.set(instance, context.get(field.getType()).get());
             }
+            for (Method method : injectMethods) {
+                method.invoke(instance, stream(method.getParameterTypes()).map(t -> context.get(t).get()).toArray());
+            }
             return instance;
         } catch (InvocationTargetException | InstantiationException | IllegalAccessException exception) {
             throw new RuntimeException();
@@ -40,7 +44,31 @@ class ConstructorInjectProvider<T> implements ContextConfig.ComponentProvider<T>
 
     @Override
     public List<Class<?>> getDependencies() {
-        return Stream.concat(stream(injectConstructor.getParameters()).map(Parameter::getType), injectFields.stream().map(Field::getType)).collect(Collectors.toList());
+        return concat(
+                concat(
+                        stream(injectConstructor.getParameters()).map(Parameter::getType),
+                        injectFields.stream().map(Field::getType)),
+                injectMethods.stream().flatMap(m -> stream(m.getParameterTypes()))
+        ).toList();
+    }
+
+    private static <T> List<Method> getInjectMethods(Class<T> component) {
+        List<Method> injectMethods = new ArrayList<>();
+        Class<?> current = component;
+        while (current != Object.class) {
+            injectMethods.addAll(
+                    stream(current.getDeclaredMethods())
+                            .filter(m -> m.isAnnotationPresent(Inject.class))
+                            .filter(m -> injectMethods.stream().noneMatch(e -> e.getName().equals(m.getName()) &&
+                                    Arrays.equals(e.getParameterTypes(), m.getParameterTypes())))
+                            .filter(m -> stream(component.getDeclaredMethods()).filter(m1->!m1.isAnnotationPresent(Inject.class))
+                                    .noneMatch(e -> e.getName().equals(m.getName()) &&
+                                            Arrays.equals(e.getParameterTypes(), m.getParameterTypes())))
+                            .toList());
+            current = current.getSuperclass();
+        }
+        Collections.reverse(injectMethods);
+        return injectMethods;
     }
 
     private static <T> List<Field> getInjectFields(Class<T> component) {
